Update .gitignore and refactor server.js for improved embed messages and new mod link functionality

--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "dev": "node ./src/server.js -e js",
     "watchdog": "node ./src/watchdog.js",
     "start:watchdog": "node ./src/watchdog.js",
-    "start:prod": "NODE_ENV=production node ./src/watchdog.js",
-    "fix-colors": "node ./fixHexColorCodes.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:prod": "NODE_ENV=production node ./src/watchdog.js"
   },
   "dependencies": {
     "axios": "^1.8.4",
