Update configuration files and enhance debug script with new features and checks

--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,44 @@
-# FS25 Bot Veritabanı Yapılandırması
-FS25_BOT_DB_PATH=./data/fs25_bot.json                            # Bot veritabanı dosya konumu
-FS25_BOT_UPTIME_FILE=./data/uptime_data.json                     # Çalışma süresi verilerinin kaydedileceği dosya
+# FS25 Bot Database Configuration
+FS25_BOT_DB_PATH=./data/fs25_bot.json                            # Bot database file path
+FS25_BOT_UPTIME_FILE=./data/uptime_data.json                     # Player uptime data file
+FS25_BOT_PLAYER_LOGS_DIR=./logs/players                          # Player activity logs directory
 
-# Güvenlik ve Bağlantı Ayarları
-FS25_BOT_DISABLE_CERTIFICATE_VERIFICATION=false                  # SSL sertifikası doğrulamasını devre dışı bırakma
-FS25_BOT_FETCH_RETRIES=3                                         # Bağlantı hatası durumunda yeniden deneme sayısı
-FS25_BOT_FETCH_RETRY_DELAY_MS=3000                               # Yeniden denemeler arasındaki bekleme süresi (ms)
-FS25_BOT_POLL_INTERVAL_MINUTES=5                                 # Sunucu durumunu kontrol etme sıklığı (dakika)
+# Security and Connection Settings
+FS25_BOT_DISABLE_CERTIFICATE_VERIFICATION=false                  # Disable SSL certificate verification
+FS25_BOT_FETCH_RETRIES=3                                         # Retry count on connection error
+FS25_BOT_FETCH_RETRY_DELAY_MS=3000                               # Delay between retries (ms)
+FS25_BOT_POLL_INTERVAL_MINUTES=5                                 # Server status polling interval (minutes)
 
-# Bildirim Ayarları
-FS25_BOT_DISABLE_SAVEGAME_MESSAGES=false                         # Kayıt mesajlarını devre dışı bırakma
-FS25_BOT_DISABLE_UNREACHABLE_FOUND_MESSAGES=false                # Sunucu erişilemez mesajlarını devre dışı bırakma
+# Notification Settings
+FS25_BOT_DISABLE_SAVEGAME_MESSAGES=false                         # Disable savegame notifications
+FS25_BOT_DISABLE_UNREACHABLE_FOUND_MESSAGES=false                # Disable unreachable server notifications
 
-# Discord Yapılandırması
-FS25_BOT_DISCORD_SERVER_NAME=                                    # Discord sunucu adı
-FS25_BOT_DISCORD_CHANNEL_NAME=                                   # Ana kanal adı
+# Discord Configuration
+FS25_BOT_DISCORD_SERVER_NAME=                                    # Discord server name
+FS25_BOT_DISCORD_CHANNEL_NAME=                                   # Main channel name
 FS25_BOT_DISCORD_TOKEN=Token.123ABC-example-token                # Discord bot token
-DAILY_SUMMARY_CHANNEL_ID=                                        # Günlük özet kanalı ID
-UPDATE_CHANNEL_ID=                                               # Güncelleme kanalı ID
-FS25_BOT_DAILY_SUMMARY_CHANNEL_ID=                               # Alternatif günlük özet kanalı ID
-FS25_BOT_UPDATE_CHANNEL_ID=                                      # Alternatif güncelleme kanalı ID
+FS25_BOT_CLIENT_ID=                                              # Discord client ID
 
-# Farming Simulator 25 Sunucu URL'leri
-FS25_BOT_URL_CAREER_SAVEGAME=http://sunucu-adresiniz:port/feed/dedicated-server-savegame.html?code=sizin-kodunuz&file=careerSavegame
-FS25_BOT_URL_SERVER_STATS=http://sunucu-adresiniz:port/feed/dedicated-server-stats.xml?code=sizin-kodunuz
+# Discord Channel IDs
+FS25_BOT_DAILY_SUMMARY_CHANNEL_ID=                               # Daily summary channel ID
+FS25_BOT_UPDATE_CHANNEL_ID=                                      # Update channel ID
+FS25_BOT_PLAYER_ACTIVITY_CHANNEL_ID=                             # Player activity channel ID
+FS25_BOT_MODS_CHANNEL_ID=                                        # Mod/DLC channel ID
 
-# Günlük İstatistik Ayarları
-FS25_BOT_DAILY_STATS_HOUR=17                                     # Günlük istatistiklerin gönderileceği saat (24 saat formatında)
-FS25_BOT_DAILY_STATS_MINUTE=0                                    # Günlük istatistiklerin gönderileceği dakika
+# Farming Simulator 25 Server URLs
+FS25_BOT_URL_CAREER_SAVEGAME=http://your-server:port/feed/dedicated-server-savegame.html?code=your-code&file=careerSavegame
+FS25_BOT_URL_SERVER_STATS=http://your-server:port/feed/dedicated-server-stats.xml?code=your-code
 
-# Watchdog Yapılandırması
-FS25_BOT_SCRIPT_PATH=./src/server.js                             # Bot başlangıç dosyası
-FS25_BOT_WATCHDOG_CHECK_INTERVAL_MS=60000                        # Kontrol aralığı (1 dakika)
-FS25_BOT_WATCHDOG_RESTART_DELAY_MS=5000                          # Yeniden başlatma gecikmesi (5 saniye)
-FS25_BOT_WATCHDOG_MAX_CRASHES=10                                 # İzin verilen maksimum çökme sayısı
-FS25_BOT_WATCHDOG_CRASH_RESET_TIME_MS=3600000                    # Çökme sayacını sıfırlama süresi (1 saat)
-FS25_BOT_LOG_DIR=./logs                                          # Log dosyalarının kaydedileceği dizin
+# Daily Stats Settings
+FS25_BOT_DAILY_STATS_HOUR=17                                     # Hour for daily stats (24h format)
+FS25_BOT_DAILY_STATS_MINUTE=0                                    # Minute for daily stats
+
+# Watchdog Configuration
+FS25_BOT_SCRIPT_PATH=./src/server.js                             # Bot entry script
+FS25_BOT_WATCHDOG_CHECK_INTERVAL_MS=60000                        # Watchdog check interval (ms)
+FS25_BOT_WATCHDOG_RESTART_DELAY_MS=5000                          # Restart delay (ms)
+FS25_BOT_WATCHDOG_MAX_CRASHES=10                                 # Max allowed crashes
+FS25_BOT_WATCHDOG_CRASH_RESET_TIME_MS=3600000                    # Crash counter reset time (ms)
+FS25_BOT_LOG_DIR=./logs/watchdog                                 # Watchdog log directory
+
+FS25_BOT_MAINTENANCE_MODE=false                                  # Enable maintenance mode
