--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "deepmerge": "^4.3.1",
     "discord.js": "^14.18.0",
     "dotenv-flow": "^4.0.1",
+    "express": "^5.1.0",
     "fetch-retry": "^6.0.0",
     "lodash": "^4.17.21",
     "npm-check": "^6.0.1",
