--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # FS25 Bot Database Configuration
 FS25_BOT_DB_PATH=./data/fs25_bot.json                            # Bot database file path
-FS25_BOT_UPTIME_FILE=./data/uptime_data.json                     # Player uptime data file
+FS25_BOT_UPTIME_FILE=./data/fs25_uptime.json                     # Player uptime data file
 FS25_BOT_PLAYER_LOGS_DIR=./logs/players                          # Player activity logs directory
 
 # Security and Connection Settings
